Add optional aws_ssm_slug to namespaces
This allows users to specify a custom namespace slug to be templated
into the AWS SSM path prefix for configuration params for a project.
