# imbi/templates/openapi.yaml
@@ -1419,6 +1419,10 @@ paths:
                       description: Optional name of associated Sentry team
                       type: string
                       nullable: true
+                    aws_ssm_slug:
+                      description: Optional slug of the namespace in the AWS SSM path
+                      type: string
+                      nullable: true
                   required:
                     - name
                     - slug
@@ -1433,6 +1437,7 @@ paths:
                       slug: PSE
                       icon_class: fas fa-blind
                       sentry_team_slug: pse
+                      aws_ssm_slug: pse
                       maintained_by:
                         - Developers
                         - Operations
@@ -1483,6 +1488,10 @@ paths:
                       description: Optional name of associated Sentry team
                       type: string
                       nullable: true
+                    aws_ssm_slug:
+                      description: Optional slug of the namespace in the AWS SSM path
+                      type: string
+                      nullable: true
                   required:
                     - name
                     - slug
@@ -1497,6 +1506,7 @@ paths:
                       slug: PSE
                       icon_class: fas fa-blind
                       sentry_team_slug: pse
+                      aws_ssm_slug: pse
                       maintained_by:
                         - Developers
                         - Operations
@@ -1544,6 +1554,10 @@ paths:
                   description: Optional name of associated Sentry team
                   type: string
                   nullable: true
+                aws_ssm_slug:
+                  description: Optional slug of the namespace in the AWS SSM path
+                  type: string
+                  nullable: true
               required:
                 - name
                 - slug
@@ -1557,6 +1571,7 @@ paths:
                   slug: PSE
                   icon_class: fas fa-blind
                   sentry_team_slug: pse
+                  aws_ssm_slug: pse
                   maintained_by:
                     - Developers
                     - Operations
@@ -1571,6 +1586,7 @@ paths:
                   slug: PSE
                   icon_class: fas fa-blind
                   sentry_team_slug: pse
+                  aws_ssm_slug: pse
                   maintained_by:
                     - Developers
                     - Operations
@@ -1604,6 +1620,7 @@ paths:
                       - Developers
                       - Operations
                     sentry_team_slug: pse
+                    aws_ssm_slug: pse
             application/msgpack:
               schema:
                 $ref: '#/paths/~1namespaces/get/responses/200/content/application~1json/schema/items'
@@ -1621,6 +1638,7 @@ paths:
                       - Developers
                       - Operations
                     sentry_team_slug: pse
+                    aws_ssm_slug: pse
         '400':
           $ref: '#/paths/~1groups/post/responses/400'
         '401':
